﻿drkns 11.10.2014 19:53:46 +0200 - build 4131

1. #0002827: При удалении групп раскраски файлов размер списка групп не уменьшается

2. Атрибуты в панелях, диалогах, результатах поиска и меню фильтров теперь в одном и том же порядке.

3. Неадекватно работала настройка колонок в результатах поиска.

4. Рефакторинг.

drkns 09.10.2014 01:53:12 +0200 - build 4130

1. Уточнение 4129.

2. Удалён неиспользуемый код.

drkns 08.10.2014 19:55:41 +0200 - build 4129

1. #0002781: Exception при работе под отладчиком VS2013

2. GCC warnings.

drkns 08.10.2014 09:50:10 +0200 - build 4128

1. #0002824: Assertion: list iterator not decrementable

drkns 01.10.2014 20:07:16 +0200 - build 4127

1. Еще пара исправлений в Message.

2. Рефакторинг.

drkns 30.09.2014 23:55:34 +0200 - build 4126

1. Продолжение 4125.

2. Уточнение 4122.1.

drkns 30.09.2014 21:08:57 +0200 - build 4125

1. 0002811: Сломали Message с флагом FMSG_ALLINONE

drkns 29.09.2014 21:27:31 +0200 - build 4124

1. Уточнение 4122.1

drkns 29.09.2014 14:09:13 +0200 - build 4123

1. Во внешний DialogBuilder добавлена поддержка флагов.

drkns 27.09.2014 15:33:27 +0200 - build 4122

1. Во внешний DialogBuilder добавлена поддержка дополнительных кнопок.

2. Во внутренний DialogBuilder добавлена поддержка списков.

drkns 27.09.2014 14:25:43 +0200 - build 4121

1. Продолжение 4120.

drkns 26.09.2014 19:23:14 +0200 - build 4120

1. Рефакторинг Message: строки отдельно, кнопки отдельно.

drkns 22.09.2014 19:59:11 +0200 - build 4119

1. С форума: Отвалилось добавление файла из панели в командную строку при открытом автодополнении в командной строке.

drkns 22.09.2014 19:21:31 +0200 - build 4118

1. #0002804: PN_CHECKMASK не распознает неправильные регексы в 3.0.4117

drkns 21.09.2014 15:58:34 +0200 - build 4117

1. Оптимизация make_vector.

zg 21.09.2014 13:35:14 +0200 - build 4116

1. уточнение 4109.2: открытие просмотра падало, если в панелях была открыта информационная панель