@@ -136,7 +136,7 @@ public:
 		int CalcLength(const wchar_t* src,int srclength);
 		int InnerCompile(const wchar_t* const start, const wchar_t* src, int srclength, int options);
 
-		int InnerMatch(const wchar_t* const start, const wchar_t* str, const wchar_t* end, RegExpMatch* match, intptr_t& matchcount, MatchHash* hmatch) const;
+		int InnerMatch(const wchar_t* const start, const wchar_t* str, const wchar_t* end, RegExpMatch* match, intptr_t& matchcount, MatchHash* hmatch, std::vector<StateStackItem>& stack) const;
 
 		void TrimTail(const wchar_t* const start, const wchar_t*& end) const;
 
