@@ -1,4 +1,8 @@
-﻿drkns 11.10.2014 19:53:46 +0200 - build 4131
+﻿drkns 13.10.2014 19:25:09 +0200 - build 4132
+
+1. С форума: "Начиная с билда 4062 скорость исполнения регулярок заметно упала."
+
+drkns 11.10.2014 19:53:46 +0200 - build 4131
 
 1. #0002827: При удалении групп раскраски файлов размер списка групп не уменьшается
 
